<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/fundo2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivConsultaFoto"
        android:layout_width="274dp"
        android:layout_height="307dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/tv06ConsultarValor"
        android:background="@color/fundo3"
        android:contentDescription="@string/foto"
        android:src="@drawable/wine800px" />

    <TextView android:id="@+id/tv01ConsultarNome" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_above="@+id/ivConsultaFoto"
        android:layout_alignParentLeft="true" android:layout_alignParentRight="true"
        android:gravity="center_horizontal|left" android:text="@string/Nome"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/fundo3" />

    <TextView android:id="@+id/tv06ConsultarValor" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentRight="true"
        android:layout_centerVertical="true" android:gravity="right" android:text="@string/valor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/fundo3" android:textSize="22sp" android:typeface="sans" />

    <ImageButton
        android:id="@+id/btn02CadastroClicaFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv06ConsultarValor"
        android:layout_alignParentRight="true"
        android:background="@color/titulo"
        android:contentDescription="@string/buscaFoto"
        android:onClick="btnCapturarFotoClick"
        android:src="@android:drawable/ic_menu_camera"
        android:visibility="invisible" />

    <TextView android:id="@+id/tv03ConsultarLoja" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" android:layout_below="@+id/ivConsultaFoto"
        android:gravity="left|center_horizontal" android:text="@string/loja"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/fundo3" />

    <Button android:id="@+id/btn01IrLoja" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_below="@+id/tv03ConsultarLoja"
        android:background="@color/fundo1" android:minHeight="100dp" android:text="@string/compra"
        android:textColor="@color/fundo" />

    <TextView android:id="@+id/tv02ConsultarLink" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_above="@+id/tv01ConsultarNome"
        android:layout_alignParentLeft="true" android:hint="@string/link"
        android:text="@string/link" android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/fundo3" android:typeface="sans" android:visibility="invisible" />

    <ImageButton
        android:id="@+id/btn01CadastroBuscaFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn02CadastroClicaFoto"
        android:layout_alignParentRight="true"
        android:background="@color/titulo"
        android:contentDescription="@string/buscaFoto"
        android:onClick="btnInserirFotoClick"
        android:src="@android:drawable/ic_menu_gallery"
        android:visibility="invisible" />

</RelativeLayout>