<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="97dp"
        tools:ignore="UselessParent">

        <TextView android:id="@+id/txv01ListarLayoutID" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/ID"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <ImageView android:id="@+id/iv01ListarFoto" android:layout_width="50dp"
            android:layout_height="200dp" android:layout_alignParentStart="true"
            android:layout_below="@+id/txv01ListarLayoutID"
            android:background="@drawable/wine_theme_438246_960_720"
            android:contentDescription="@string/app_name"
            android:src="@drawable/vinho_vermelho_de_derramamento_23_2147510336" />

        <TextView android:id="@+id/txv02ListarLayoutNome" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" android:layout_alignTop="@+id/iv01ListarFoto"
            android:layout_marginLeft="17dp" android:layout_toEndOf="@+id/iv01ListarFoto"
            android:layout_toRightOf="@+id/iv01ListarFoto" android:text="@string/Nome"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>