<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/fundo2"
    android:gravity="clip_horizontal" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.buscarvinhos.TelaInicial">

    <ImageView
        android:id="@+id/iv01ImagemTelaInicial"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_centerInParent="true"
        android:background="@color/fundo3"
        android:contentDescription="@string/app_name"
        android:src="@drawable/wine800px"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv02LoginTelaInicial"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/iv01ImagemTelaInicial"
        android:layout_alignRight="@+id/iv01ImagemTelaInicial"
        android:layout_centerVertical="true"
        android:background="@color/fundo2"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/fundo3"
        android:textColorLink="?android:attr/colorMultiSelectHighlight"
        android:textSize="26sp"
        android:textStyle="normal|bold"
        android:typeface="sans"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn01TelaInicialCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/iv01ImagemTelaInicial"
        android:onClick="@string/TelaInicialCadastrarClick"
        android:text="@string/Cadastrar"
        android:textColor="@color/titulo"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/btn03TelaInicialClicaFoto"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_alignBottom="@+id/iv01ImagemTelaInicial"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/foto"
        android:onClick="btnTelaInicialCapturarFotoClick"
        android:src="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/btn02TelaInicialListar"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_alignTop="@+id/iv01ImagemTelaInicial"
        android:layout_centerHorizontal="true"
        android:onClick="@string/TelaInicialListarClick"
        android:src="@android:drawable/ic_menu_search"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv01TituloTelaInicial"
        style="@android:style/Widget.TextView"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignEnd="@+id/iv01ImagemTelaInicial"
        android:layout_below="@+id/iv01ImagemTelaInicial"
        android:layout_marginTop="2dp"
        android:autoLink="web|email"
        android:autoText="false"
        android:background="@color/titulo1"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:linksClickable="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="@android:color/background_light"
        android:text="@string/login_email"
        android:textAlignment="gravity"
        android:textColor="@color/fundo2"
        android:textColorHint="@android:color/holo_orange_light"
        android:textColorLink="@android:color/holo_green_light"
        android:textDirection="firstStrong"
        android:textSize="18sp"
        android:typeface="sans" />

    <ProgressBar
        android:id="@+id/pb01TelaInicial"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="217dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:secondaryProgress="0"
        android:visibility="invisible"
        android:progressDrawable="@drawable/circular" />

    <TextView
        android:id="@+id/tv04ProgressTelaInicial"
        android:layout_width="16dp"
        android:layout_height="31dp"
        android:layout_centerInParent="true"
        android:text="TextView"
        android:visibility="invisible" />

</RelativeLayout>