<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="97dp"
        tools:ignore="UselessParent">

        <TextView android:id="@+id/txv01ListarLayoutVinhosFotoID"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" android:layout_alignParentRight="true"
            android:text="@string/ID" android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <ImageView android:id="@+id/iv01ListarVinhosFotoFoto" android:layout_width="50dp"
            android:layout_height="200dp" android:layout_alignParentStart="true"
            android:layout_below="@+id/txv01ListarLayoutID" android:background="@color/fundo2"
            android:contentDescription="@string/app_name"
            android:src="@drawable/vinho_vermelho_de_derramamento_23_2147510336" />

        <ImageButton android:id="@+id/ibtn01BuscaLojasFoto" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txv02ListarLayoutVinhosFotoNome"
            android:background="@color/fundo2" android:src="@drawable/icons8_avancar_48"
            android:visibility="visible" />

        <TextView android:id="@+id/txv02ListarLayoutVinhosFotoNome"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/txv01ListarLayoutVinhosFotoID"
            android:layout_toEndOf="@+id/iv01ListarFoto"
            android:layout_toLeftOf="@+id/ibtn01BuscaLojasFoto"
            android:layout_toRightOf="@+id/iv01ListarVinhosFotoFoto"
            android:background="@color/fundo2" android:text="@string/Nome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/fundo3" android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>